poke/testsuite/poke.pkl/field-init-diag-1.pk
/* { dg-do compile } */

deftype Foo = struct { int a = "foo"; }; /* { dg-error "" } */
